# varianttype

./: CMakeLists.txt  README.md  azure-pipelines.yml  build.py  main.cpp  varianttype.cpp  varianttype.h
